--- a/SignalRCore.API/appsettings.json
+++ b/SignalRCore.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConStr":  "Data Source = .; Initial Catalog = SignalRCoreDB; Integrated Security = True; Connect Timeout=30; Encrypt = False; MultiSubnetFailover=False",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
